<resources>
    <string name="app_name">Avocode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer">Drawer</string>
    <string name="google_key">AIzaSyBV1Lpmb7cs4ymo54k1uPvl5TtNHSm9K54</string>
    <!-- Real old key: AIzaSyCPng2_q4AhMDXeHtwOSJyjDc_fUQ9E1ts-->
    <string name="signup">SIGNUP</string>
    <string name="login">Login</string>
    <string name="location_permission">Location permission</string>
    <string name="message_location">Location permission is needed for core functionality</string>
    <string name="need_permission">Need Permissions</string>
    <string name="message_permission_settings">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="message_turn_on_gps">Please turn on GPS</string>
    <string name="message_turn_on_mobile_data_or_wifi">Please turn on Mobile data or WIFI</string>
    <string name="introduce_yourself">INTRODUCE YOURSELF</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="select_date_of_birth">SELECT DATE OF BIRTH</string>
    <string name="gender">GENDER</string>
    <string name="select_your_gender">SELECT YOUR GENDER</string>
    <string name="password">PASSWORD</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="family_code">FAMILY CODE</string>
    <string name="enter_family_code">ENTER FAMILY CODE</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="next">NEXT</string>
    <string name="message_family_code_not_fit">Family code should be 5 alphanumeric characters string</string>
    <string name="message_phone_required">Phone number required!!</string>
    <string name="message_password_required">Password required!!</string>
    <string name="message_first_name_required">First name required</string>
    <string name="message_last_name_required">Last name required</string>
    <string name="message_provide_image">provide a real photo of you, so that responders can recognise you in case of emergency</string>
    <string name="message_add_picture">Please add your picture first</string>
    <string name="verify_contact_number">VERIFY CONTACT NUMBER</string>
    <string name="_91">+91</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="resend_code_text">You can resend code in : %1$s sec</string>
    <string name="invalid_phone">Invalid phone number.</string>
    <string name="send_code">Send Code</string>
    <string name="message_verification_failed">Verification failed. Please try again later</string>
    <string name="message_add_otp">Please add OTP first</string>
    <string name="db_name">appv1.db</string>
    <string name="message_creating_profile">Creating your profile…</string>
    <string name="message_picture_empty">Profile Picture is empty</string>
    <string name="apk_folder_name">com.example.avocode</string>
    <string name="message_user_registration_failed">User registration failed. Please Try again later</string>
    <string name="message_user_already_exist">User already exist</string>
    <string name="message_updating_family_id">Family Code updating…</string>
    <string name="message_updating_family_id_failed">Family Code update failed. Please Try again later</string>
    <string name="message_logging">Logging you in…</string>
    <string name="message_credential_invalid">Phone number or Password is wrong</string>
    <string name="please_wait">Please wait…</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="attention">Attention!</string>
    <string name="message_sign_out">Are you sure want to sign out from the app?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="fullName">%s %s</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="gender_label">gender</string>
    <string name="dob">dob</string>
    <string name="password_label">password</string>
    <string name="phone_label">phone</string>
    <string name="uriPath">uriPath</string>
    <string name="familyCode">familyCode</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="family">FAMILY</string>
    <string name="family_code_with_value">FAMILY CODE : %s</string>
    <string name="add_to_family">ADD TO FAMILY</string>
    <string name="family_description">The members in this list receive emergency updates when you\'re vulnerable or in danger, and they get to see your location when you choose to share it.</string>
    <string name="profile">PROFILE</string>
    <string name="enter_family_code_description">ENTER THE FAMILY CODE OF THE PERSON YOU WANT TO ADD</string>
    <string name="go">GO</string>
    <string name="or">OR</string>
    <string name="share_family_code_description">SHARE YOUR FAMILY CODE WITH YOUR ACQUAINTANCES, AND BE SAFER</string>
    <string name="share_code">SHARE CODE</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="report_a_crime">REPORT A CRIME</string>
    <string name="share_location">SHARE LOCATION</string>
</resources>
