<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/Title"
        android:fontFamily="@font/mb"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhone"
        style="@style/loginTextView"
        android:fontFamily="@font/mb"
        android:text="@string/phone_number"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />


    <LinearLayout
        android:id="@+id/flPhone"
        android:background="@drawable/rect_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPhone">

        <Spinner
            android:id="@+id/phonePrefix"
            style="@style/phonePrefixSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:ems="10"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:entries="@array/phonePrefixes" />

        <!--TextView
            style="@style/loginActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:ems="10"
            android:fontFamily="@font/mr"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="+91" /-->

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/loginEditText"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPassword"
        style="@style/loginTextView"
        android:fontFamily="@font/mr"
        android:text="@string/password"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flPhone" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/loginEditText"
        android:fontFamily="@font/ml"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <Button
        android:id="@+id/buttonNext"
        style="@style/blackButton"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/mr"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />


</android.support.constraint.ConstraintLayout>