<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewFamily"
        style="@style/Title"
        android:text="@string/family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewFamilyCode"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/ic_green_bg"
        style="@style/familyCodeTitle"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/family_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFamily" />

    <TextView
        android:id="@+id/btnAddToFamily"
        android:layout_width="0dp"
        android:layout_height="52dp"
        style="@style/addToFamily"
        android:gravity="center"
        android:background="@drawable/rounded_border"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="44dp"
        android:drawableStart="@drawable/ic_plus"
        android:paddingStart="12dp"
        android:singleLine="true"
        android:text="@string/add_to_family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFamilyCode"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        style="@style/theMember"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/family_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddToFamily" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFamilyGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

</android.support.constraint.ConstraintLayout>