<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SignUpThreeActivity">

    <TextView
        android:id="@+id/textView3"
        style="@style/Title"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verify_number_tv"
        style="@style/verifyTextView"
        android:text="@string/verify_contact_number"
        app:layout_constraintBottom_toTopOf="@+id/phonenumber_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/phonenumber_et"
        style="@style/loginEditText"
        android:inputType="phone"
        android:text="+918200098804"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_number_tv" />

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_et">

        <Button
            android:id="@+id/resend_code_btn"
            style="@style/ResendButton"
            android:background="@drawable/rounded_border"
            android:text="@string/send_code"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            style="@style/verifyTextView"
            android:layout_centerHorizontal="true"
            android:text="0"
            android:visibility="gone" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nextSignUp3_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@drawable/rounded_border"
            android:textColor="@color/black"
            app:itemCount="6"
            app:lineColor="@color/black"
            app:viewType="line" />

    </LinearLayout>

    <Button
        android:id="@+id/nextSignUp3_btn"
        style="@style/nextButton"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>